
2019-01-15 13:15 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * gs_Run() added.
    * It is possibly now to build guiserver as a harbour library, using the -DGUIS_LIB.
  * extgui.prg
  * hbip.c
  * listen.c
    * hb_ prefixes has been changed to gs_

2019-01-09 18:30 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Few Harbour functions added to EXTERNAL.

2018-12-30 21:20 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    ! Small fix

2018-12-11 21:24 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Added support for the header panel, bitmap in styles and xt, yt in ownerbuttons.

2018-12-07 14:50 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    ! Few fixes in AddWidget() to receive correctly logical options.

2018-12-07 11:18 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Added support for a browse with marks.

2018-12-06 21:05 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * Added support for setting codeblocks in BrwSetColumnEx() and SetParam()

2018-12-06 12:25 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * extgui.prg
  * guiserver.prg
    * Added support for HStaticLink
    * Version number has been changed to 1.4.

2018-12-05 20:52 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    * pgo() converts all non character params to a string

2018-12-05 15:08 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * extgui.prg
  * guiserver.prg
    * Added support for BrwSetColumnEx() ("brwcolx" )

2018-12-04 21:44 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
    ! Fix in PrintInit()

2018-12-04 13:05 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * guiserver.prg
  * listen.c
    * The GuiServer is closed now in case of connection error -
      if the main application crashes, for example.

2018-11-30 12:30 UTC+0300 Alexander Kresin <alex@kresin.ru>
  * extgui.prg
  * guiserver.prg