@@ -1,4 +1,8 @@
 
+2019-01-16 10:04 UTC+0300 Alexander Kresin <alex@kresin.ru>
+  * source files (*.prg, *.c) has been moved to 'source' directory,
+    build files updated.
+
 2019-01-15 13:15 UTC+0300 Alexander Kresin <alex@kresin.ru>
   * guiserver.prg
     * gs_Run() added.
